--- a/src/main.css
+++ b/src/main.css
@@ -1,18 +1,21 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
 html,
 body {
     font-family: "Helvetica", Sans-Serif;
 }
+
 header {
     color: #222326;
-    padding: 10px 50px;    
+    padding: 10px 50px;
     margin-bottom: 25px;
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
+
 .container {
     padding: 0px 50px;
 }
@@ -27,15 +30,17 @@ header {
 .hide {
     display: none;
 }
-  
+
 .show {
     display: block;
 }
-.chkBtn{
+
+.chkBtn {
     width: 25px;
     height: 26px;
 }
-.selectDoc{
+
+.selectDoc {
     width: 550px;
     height: 40px;
     padding: 0px 10px;
@@ -45,7 +50,9 @@ header {
     background-color: #fff;
     margin-bottom: 15px;
 }
-#uploadDoc, #uploadDoc1 {
+
+#uploadDoc,
+#uploadDoc1 {
     color: #0d4c47;
     font-size: 15px;
     display: none;
@@ -57,16 +64,18 @@ header {
     background-color: #e4e4e4;
     align-items: center;
     border-radius: 20px;
-     
+
 }
-.fileUpload input[type=file]{
-    display:none;
+
+.fileUpload input[type=file] {
+    display: none;
 }
-.btn{
-    background-color:#f0c8c8;
-    color:#333;
-    border:1px solid #2c2c2c;
-    border-radius:3px;
-    padding:6px 12px;
-    font-size:16px;
-} 
+
+.btn {
+    background-color: #f0c8c8;
+    color: #333;
+    border: 1px solid #2c2c2c;
+    border-radius: 3px;
+    padding: 6px 12px;
+    font-size: 16px;
+}
