--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,6 @@ header {
     margin-bottom: 10px;
 }
 
-
 .hide {
     display: none;
 }
@@ -78,4 +77,17 @@ header {
     border-radius: 3px;
     padding: 6px 12px;
     font-size: 16px;
+}
+
+.btnStyle {
+    background-color: #5f715f;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 10px 24px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 16px 2px;
+    cursor: pointer;
 }
