--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,5 @@
   </div>
 </section>
 <app-footer></app-footer>
+<!-- <ngx-spinner type="ball-scale-multiple"></ngx-spinner> -->
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#fff" type = "ball-scale-multiple" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
