--- a/src/app/components/document-upload/document-upload.component.html
+++ b/src/app/components/document-upload/document-upload.component.html
@@ -1,8 +1,8 @@
 <section>
-    <h1 class="text-center" [textContent]="documents.instructionHeaderLocale"></h1>
-    <p [innerHtml]="documents.instructionTextLocale"></p>
+    <!-- <h1 class="text-center" [textContent]="documents.instructionHeaderLocale"></h1> -->
+    <!-- <p [innerHtml]="documents.instructionTextLocale"></p> -->
 
-    <div class="dynamic-document-section">
+    <div class="dynamic-document-section" *ngIf="documents">
         <app-dynamic-documents [dynamicFormData]="documents"></app-dynamic-documents>
     </div>
 </section>
