--- a/src/app/components/dynamic-documents/dynamic-documents.component.html
+++ b/src/app/components/dynamic-documents/dynamic-documents.component.html
@@ -1,48 +1,115 @@
 <div>
     <div>
-        <form #nameForm="ngForm" novalidate [formGroup]="dynamicForm" (ngSubmit)="onSubmit()">
-            <div *ngFor="let control of dynamicFieldData.documentDetails; let i=index">
-
-                <!-- Select Drop Down -->
-                <div class="form-group" *ngIf="control.fieldType == 'select'">
-                    <div class="blck">
-                        <select class="form-control float-left" (change)="selectOptions(saveDynamicDataObj[control.fileName+i], i)" 
-                        [(ngModel)]="saveDynamicDataObj[control.field]" required={{control.required}} [ngModelOptions]="{standalone: true}" 
-                        id={{control.field}} name={{control.field}} #{{control.field}}="ngModel" [disabled]="control.saved">
-                            <option [ngValue]="undefined" disabled>Select An Option</option>
-                            <option *ngFor="let item of control.options" [ngValue]="item">{{item}}</option>
-                        </select>
-                        <span class="select-mark float-left" *ngIf="control.saved"><img src="assets/images/checked.png" alt="" srcset=""></span>
+        <form #nameForm="ngForm" novalidate [formGroup]="dynamicForm">
+            <div *ngFor="let control of dynamicFieldData.steps; let i=index;">
+                <!-- Completed Steps Block -->
+                <div class="completedStepsBlock">
+                    <!-- Radio Button Block -->
+                    <div class="form-group" *ngIf="control.inputType == 'RADIO_BUTTON' && control.status == 'COMPLETED'">
+                        <div class="form-check form-check-inline" *ngFor="let radioItem of control.options">
+                            <input class="form-check-input" type="radio" [(ngModel)]="control.collectedValues[0]" 
+                            [ngModelOptions]="{standalone: true}" id="inlineRadio1" name={{radioItem.value}} #{{radioItem.value}}="ngModel" 
+                            value={{radioItem.value}} [checked]="radioItem.value == control.collectedValues[0]" [disabled]="control.status == 'COMPLETED'">
+                            <label class="form-check-label" for="inlineRadio{{radioItem.value}}">{{radioItem.displayLabel}}</label>
+                        </div>
                     </div>
-                    <div class="fileUpload" *ngIf="!control.saved && selectedOption == i && saveDynamicDataObj[control.field] != 'I don’t have any of these documents'">
-                        <span>{{saveDynamicDataObj[control.field]}}</span>
-                        <input type="file" name="" id="" [(ngModel)]="saveDynamicDataObj[control.fileName + i]" observeFiles [ngModelOptions]="{standalone: true}">
+                    <!-- Select Drop Down -->
+                    <div class="form-group" *ngIf="control.inputType == 'DROPDOWN' && control.status == 'COMPLETED'">
+                        <div class="blck">
+                            <select class="form-control float-left"
+                            [(ngModel)]="control.collectedValues[0]" required={{control.required}} [ngModelOptions]="{standalone: true}" 
+                            id={{control.field}} name={{control.field}} #{{control.field}}="ngModel" [disabled]="control.status == 'COMPLETED'">
+                                <option [ngValue]="undefined" disabled>{{control.dropdownPlaceHolder}}</option>
+                                <option *ngFor="let item of control.options" [ngValue]="item.value">{{item.displayLabel}}</option>
+                            </select>
+                            <span class="select-mark float-left" *ngIf="control.status == 'COMPLETED'"><img src="assets/images/checked.png" alt="" srcset=""></span>
+                        </div>
                     </div>
                 </div>
+                <!-- End Completed Steps Block -->
 
+                <!-- Pending Steps Block -->
+                <div class="pendingStepsBlock">
+                    <!-- Radio Button Block -->
+                    <div class="form-group" *ngIf="control.inputType == 'RADIO_BUTTON' && control.status == 'PENDING'">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" [(ngModel)]="saveDynamicDataObj.nationality" 
+                            [ngModelOptions]="{standalone: true}" id="inlineRadio1" name="radio" #{{radio}}="ngModel" 
+                            value="UK" [disabled]="completedDocument?.status == 'COMPLETED'" (change)="displaySaveBtn()">
+                            <label class="form-check-label" for="inlineRadio1">UK</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" [(ngModel)]="saveDynamicDataObj.nationality" 
+                            [ngModelOptions]="{standalone: true}" id="inlineRadio2" name="radio" #{{radio}}="ngModel" 
+                            value="NonUK" [disabled]="completedDocument?.status == 'COMPLETED'" (change)="displaySaveBtn()">
+                            <label class="form-check-label" for="inlineRadio2">Non UK</label>
+                        </div>
+                    </div>
+                    <!-- Select Drop Down -->
+                    <div class="form-group" *ngIf="control.inputType == 'DROPDOWN' && control.status == 'PENDING'">
+                        <div class="blck">
+                            <select class="form-control float-left" (change)="selectOptions(selectedOptionValue.values)" 
+                            [(ngModel)]="selectedOptionValue.values" required={{dynamicFieldData.required}} [ngModelOptions]="{standalone: true}" 
+                            id={{dynamicFieldData.field}} name={{dynamicFieldData.field}} #{{dynamicFieldData.field}}="ngModel" [disabled]="dynamicFieldData.saved">
+                                <option [ngValue]="undefined" disabled>{{control.dropdownPlaceHolder}}</option>
+                                <option *ngFor="let item of control.options" [ngValue]="item">{{item.displayLabel}}</option>
+                            </select>
+                            <span class="select-mark float-left" *ngIf="dynamicFieldData.status == 'COMPLETED'"><img src="assets/images/checked.png" alt="" srcset=""></span>
+                        </div>
+                        <div class="fileUpload" *ngIf="selectedOption">
+                            <span>{{selectedLabelName}}</span>
+                            <input type="file" name="" #fileInput [(ngModel)]="saveDynamicDataObj.documentName" observeFiles [ngModelOptions]="{standalone: true}">
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" (click)="onSubmit(control)" *ngIf="dynamicForm.valid && control.status == 'PENDING' && !redirectToNext && showSubmitBtn">Submit</button>
+                </div>
+                <!-- End Pending Steps Block -->
+            </div>
+
+            <div>
                 <!-- Radio Button Block -->
-                <div class="form-group" *ngIf="control.fieldType == 'radio'">
+                <!-- <div class="form-group">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" [(ngModel)]="saveDynamicDataObj[control.field]" [ngModelOptions]="{standalone: true}" id="inlineRadio1" name={{control.field}} #{{control.field}}="ngModel" value="UK" [disabled]="control.saved">
+                        <input class="form-check-input" type="radio" [(ngModel)]="saveDynamicDataObj.nationality" 
+                        [ngModelOptions]="{standalone: true}" id="inlineRadio1" name="radio" #{{radio}}="ngModel" 
+                        value="UK" [disabled]="completedDocument?.status == 'COMPLETED'" (change)="displaySaveBtn()">
                         <label class="form-check-label" for="inlineRadio1">UK</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" [(ngModel)]="saveDynamicDataObj[control.field]" [ngModelOptions]="{standalone: true}" id="inlineRadio2" name={{control.field}} #{{control.field}}="ngModel" value="NonUK" [disabled]="control.saved">
+                        <input class="form-check-input" type="radio" [(ngModel)]="saveDynamicDataObj.nationality" 
+                        [ngModelOptions]="{standalone: true}" id="inlineRadio2" name="radio" #{{radio}}="ngModel" 
+                        value="NonUK" [disabled]="completedDocument?.status == 'COMPLETED'" (change)="displaySaveBtn()">
                         <label class="form-check-label" for="inlineRadio2">Non UK</label>
                     </div>
-                </div>
+                </div> -->
+
+                <!-- Select Drop Down -->
+                <!-- <div class="form-group" *ngIf="dynamicFieldData.inputType == 'DROPDOWN'">
+                    <div class="blck">
+                        <select class="form-control float-left" (change)="selectOptions(selectedOptionValue.values)" 
+                        [(ngModel)]="selectedOptionValue.values" required={{dynamicFieldData.required}} [ngModelOptions]="{standalone: true}" 
+                        id={{dynamicFieldData.field}} name={{dynamicFieldData.field}} #{{dynamicFieldData.field}}="ngModel" [disabled]="dynamicFieldData.saved">
+                            <option [ngValue]="undefined" disabled>{{dynamicFieldData.dropdownPlaceHolder}}</option>
+                            <option *ngFor="let item of dynamicFieldData.options" [ngValue]="item">{{item.displayLabel}}</option>
+                        </select>
+                        <span class="select-mark float-left" *ngIf="dynamicFieldData.status == 'COMPLETED'"><img src="assets/images/checked.png" alt="" srcset=""></span>
+                    </div>
+                    <div class="fileUpload" *ngIf="selectedOption">
+                        <span>{{selectedLabelName}}</span>
+                        <input type="file" name="" #fileInput [(ngModel)]="saveDynamicDataObj.documentName" observeFiles [ngModelOptions]="{standalone: true}">
+                    </div>
+                </div> -->
 
                 <!-- Input type Block -->
-                <div class="form-group" *ngIf="control.fieldType == 'input'">
-                    <!-- <label for="exampleInputEmail1"></label> -->
+                <!-- <div class="form-group" *ngIf="control.fieldType == 'input'">
                     <input type="text" class="form-control" [(ngModel)]="saveDynamicDataObj[control.field]" 
                     [ngModelOptions]="{standalone: true}" id={{control.field}} name={{control.field}} #{{control.field}}="ngModel"
                      [disabled]="control.saved" placeholder={{control.placeholder}}>
-                </div>
+                </div> -->
             </div>
 
-            <button type="submit" class="btn btn-primary" *ngIf="dynamicForm.valid && !redirectToNext">Submit</button>
-            <button type="button" class="btn btn-primary" *ngIf="redirectToNext" (click)="goToNext()">Next</button>
+            <button type="button" class="btn btn-primary" *ngIf="redirectToNext || dynamicFieldData.status == 'COMPLETED'" (click)="goToNext()">Next</button>
           </form>
     </div>
 </div>
