--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    height: 100%;
+}
 body {
+    height: 100%;
+    padding-bottom: 57px;
     background: #f5f5f5;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 12px;
