--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,33 @@ p {
 a.privacy {
     font-size: 12px;
 }
+
+.top-10 {
+    margin-top: 10px;
+}
+.top-20 {
+    margin-top: 20px;
+}
+.top-30 {
+    margin-top: 30px;
+}
+.top-40 {
+    margin-top: 40px;
+}
+.bottom-10 {
+    margin-bottom: 10px;
+}
+.bottom-20 {
+    margin-bottom: 20px;
+}
+.bottom-30 {
+    margin-bottom: 30px;
+}
+.bottom-40 {
+    margin-bottom: 40px;
+}
+.btn-primary {
+    background-color: #122E53;
+    color: #ffffff;
+    border-color: #122E53;
+}
