--- a/src/app/components/dynamic-documents/dynamic-documents.component.html
+++ b/src/app/components/dynamic-documents/dynamic-documents.component.html
@@ -25,6 +25,22 @@
                             <span class="select-mark float-left" *ngIf="control.status == 'COMPLETED'"><img src="assets/images/checked.png" alt="" srcset=""></span>
                         </div>
                     </div>
+
+                     <!-- Prefill PDF document -->
+                     <div *ngIf="dynamicFieldData.category == 'PROOF_OF_ID'">
+                        <div  class="form-group tokens" *ngIf="control.step == 'STATIC_TOKEN_COLLECTION_STEP' && control.status == 'COMPLETED'">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="true" id="staticToken"
+                                [disabled]="control.status == 'COMPLETED'" [checked]="control.status == 'COMPLETED'">
+                                <label class="form-check-label" for="staticToken">
+                                   Save static tocken step to sign the digital document
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group eSignatureBlock" *ngIf="control.step == 'SIGNATURE_COLLECTION_STEP'  && control.status == 'COMPLETED'">
+                            SIGNATURE COLLECTION STEP - {{control.status}}
+                        </div>
+                    </div>
                 </div>
                 <!-- End Completed Steps Block -->
 
@@ -61,54 +77,29 @@
                             <input type="file" name="" #fileInput [(ngModel)]="saveDynamicDataObj.documentName" observeFiles [ngModelOptions]="{standalone: true}">
                         </div>
                     </div>
+                    
+                    <!-- Prefill PDF document -->
+                    <div *ngIf="dynamicFieldData.category == 'PROOF_OF_ID'">
+                        <div  class="form-group tokens" *ngIf="control.step == 'STATIC_TOKEN_COLLECTION_STEP' && control.status == 'PENDING'">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="false" id="staticToken" [checked]="selectStaticToken" (change)="selectStaticTokenFn($event)">
+                                <label class="form-check-label" for="staticToken">
+                                   Save static tocken step to sign the digital document
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group eSignatureBlock" *ngIf="control.step == 'SIGNATURE_COLLECTION_STEP' && control.status == 'PENDING'">
+                            <app-digital-signature (ParentComponet)="ParentComponent($event)"></app-digital-signature>
+                        </div>
+                    </div>
 
                     <button type="submit" class="btn btn-primary" (click)="onSubmit(control)" *ngIf="dynamicForm.valid && control.status == 'PENDING' && !redirectToNext && showSubmitBtn">Submit</button>
                 </div>
                 <!-- End Pending Steps Block -->
             </div>
 
-            <div>
-                <!-- Radio Button Block -->
-                <!-- <div class="form-group">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" [(ngModel)]="saveDynamicDataObj.nationality" 
-                        [ngModelOptions]="{standalone: true}" id="inlineRadio1" name="radio" #{{radio}}="ngModel" 
-                        value="UK" [disabled]="completedDocument?.status == 'COMPLETED'" (change)="displaySaveBtn()">
-                        <label class="form-check-label" for="inlineRadio1">UK</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" [(ngModel)]="saveDynamicDataObj.nationality" 
-                        [ngModelOptions]="{standalone: true}" id="inlineRadio2" name="radio" #{{radio}}="ngModel" 
-                        value="NonUK" [disabled]="completedDocument?.status == 'COMPLETED'" (change)="displaySaveBtn()">
-                        <label class="form-check-label" for="inlineRadio2">Non UK</label>
-                    </div>
-                </div> -->
-
-                <!-- Select Drop Down -->
-                <!-- <div class="form-group" *ngIf="dynamicFieldData.inputType == 'DROPDOWN'">
-                    <div class="blck">
-                        <select class="form-control float-left" (change)="selectOptions(selectedOptionValue.values)" 
-                        [(ngModel)]="selectedOptionValue.values" required={{dynamicFieldData.required}} [ngModelOptions]="{standalone: true}" 
-                        id={{dynamicFieldData.field}} name={{dynamicFieldData.field}} #{{dynamicFieldData.field}}="ngModel" [disabled]="dynamicFieldData.saved">
-                            <option [ngValue]="undefined" disabled>{{dynamicFieldData.dropdownPlaceHolder}}</option>
-                            <option *ngFor="let item of dynamicFieldData.options" [ngValue]="item">{{item.displayLabel}}</option>
-                        </select>
-                        <span class="select-mark float-left" *ngIf="dynamicFieldData.status == 'COMPLETED'"><img src="assets/images/checked.png" alt="" srcset=""></span>
-                    </div>
-                    <div class="fileUpload" *ngIf="selectedOption">
-                        <span>{{selectedLabelName}}</span>
-                        <input type="file" name="" #fileInput [(ngModel)]="saveDynamicDataObj.documentName" observeFiles [ngModelOptions]="{standalone: true}">
-                    </div>
-                </div> -->
-
-                <!-- Input type Block -->
-                <!-- <div class="form-group" *ngIf="control.fieldType == 'input'">
-                    <input type="text" class="form-control" [(ngModel)]="saveDynamicDataObj[control.field]" 
-                    [ngModelOptions]="{standalone: true}" id={{control.field}} name={{control.field}} #{{control.field}}="ngModel"
-                     [disabled]="control.saved" placeholder={{control.placeholder}}>
-                </div> -->
-            </div>
-
+            <!-- <app-digital-signature (ParentComponet)="ParentComponent($event)"></app-digital-signature> -->
+            
             <button type="button" class="btn btn-primary" *ngIf="redirectToNext || dynamicFieldData.status == 'COMPLETED'" (click)="goToNext()">Next</button>
           </form>
     </div>
