--- a/src/app/components/dynamic-documents/dynamic-documents.component.scss
+++ b/src/app/components/dynamic-documents/dynamic-documents.component.scss
@@ -78,7 +78,7 @@ input[type="radio"]:checked ~ * {
     text-transform: uppercase;
     cursor: pointer;
     color: white;
-    background-color: #2196f3;
+    background-color: #122E53;
     box-shadow: 0 0 4px #999;
     outline: none;
   }
