--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,8 +1,11 @@
 .footer {
-    position: fixed;
-    bottom: 0;
+    // position: fixed;
+    // bottom: 0;
     width: 100%;
-    margin-top: 20px;
+    padding-top: 20px;
+    background: #f5f5f5;
+    border-top: 1px solid #d5d5d5;
+    margin-top: 50px;
     p {
         color: #a1a1a1;
     }
