--- a/src/app/components/dynamic-documents/dynamic-documents.component.html
+++ b/src/app/components/dynamic-documents/dynamic-documents.component.html
@@ -1,5 +1,11 @@
 <div>
     <div>
+        <!-- <pdf-viewer class="pdfViewerContainer" [src]="pdfSrcHardCoded" [render-text]="true" [original-size]="false"></pdf-viewer> -->
+        <!-- <ngx-extended-pdf-viewer *ngIf="showPdfView" [src]="pdfSrc" [useBrowserLocale]="true" 
+        [textLayer]="true"  [showHandToolButton]="true"> </ngx-extended-pdf-viewer> -->
+    </div>
+
+    <div>
         <form #nameForm="ngForm" novalidate [formGroup]="dynamicForm">
             <div *ngFor="let control of dynamicFieldData.steps; let i=index;">
                 <!-- Completed Steps Block -->
@@ -28,7 +34,7 @@
 
                      <!-- Prefill PDF document -->
                      <div *ngIf="dynamicFieldData.category == 'PROOF_OF_ID'">
-                        <div  class="form-group tokens" *ngIf="control.step == 'STATIC_TOKEN_COLLECTION_STEP' && control.status == 'COMPLETED'">
+                        <!-- <div  class="form-group tokens" *ngIf="control.step == 'STATIC_TOKEN_COLLECTION_STEP' && control.status == 'COMPLETED'">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="true" id="staticToken"
                                 [disabled]="control.status == 'COMPLETED'" [checked]="control.status == 'COMPLETED'">
@@ -36,9 +42,14 @@
                                    Save static tocken step to sign the digital document
                                 </label>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="form-group eSignatureBlock" *ngIf="control.step == 'SIGNATURE_COLLECTION_STEP'  && control.status == 'COMPLETED'">
-                            SIGNATURE COLLECTION STEP - {{control.status}}
+                            <!-- <span>{{getPdfFile(dynamicFieldData.byteArray)}}</span> -->
+                            <div >
+                                <ngx-extended-pdf-viewer [base64Src]="dynamicFieldData.byteArray" [showToolbar]="false"  [showUnverifiedSignatures]="true" [useBrowserLocale]="true"></ngx-extended-pdf-viewer>
+                                <!-- <pdf-viewer class="pdfViewerContainer" [src]="pdfSrc" [render-text]="true" [original-size]="false"></pdf-viewer> -->
+                            </div>
+                            <!-- SIGNATURE COLLECTION STEP - {{control.status}} -->
                         </div>
                     </div>
                 </div>
@@ -81,14 +92,22 @@
                     <!-- Prefill PDF document -->
                     <div *ngIf="dynamicFieldData.category == 'PROOF_OF_ID'">
                         <div  class="form-group tokens" *ngIf="control.step == 'STATIC_TOKEN_COLLECTION_STEP' && control.status == 'PENDING'">
-                            <div class="form-check">
+                            <span>{{onSubmit(control)}}</span>
+                            <!-- <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="false" id="staticToken" [checked]="selectStaticToken" (change)="selectStaticTokenFn($event)">
                                 <label class="form-check-label" for="staticToken">
                                    Save static tocken step to sign the digital document
                                 </label>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="form-group eSignatureBlock" *ngIf="control.step == 'SIGNATURE_COLLECTION_STEP' && control.status == 'PENDING'">
+                            <div>
+                                <!-- <pdf-viewer class="pdfViewerContainer" [src]="pdfSrc" [render-text]="true" [original-size]="false"></pdf-viewer> -->
+                                <ngx-extended-pdf-viewer [base64Src]="dynamicFieldData.byteArray" [showUnverifiedSignatures]="true" [showToolbar]="false" [useBrowserLocale]="true"></ngx-extended-pdf-viewer>
+                                
+                            </div>
+                            <!-- <span>{{getPdfFile(dynamicFieldData.byteArray)}}</span> -->
+                            
                             <app-digital-signature (ParentComponet)="ParentComponent($event)"></app-digital-signature>
                         </div>
                     </div>
