--- a/src/app/components/dynamic-documents/dynamic-documents.component.scss
+++ b/src/app/components/dynamic-documents/dynamic-documents.component.scss
@@ -82,3 +82,8 @@ input[type="radio"]:checked ~ * {
     box-shadow: 0 0 4px #999;
     outline: none;
   }
+
+  .pdfViewerContainer{
+      width: 100%;
+      height: calc(100vh - 200px);
+  }
